conf/iptables
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#status
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#loopback
-A INPUT -i lo -j ACCEPT
#icmp
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#ssh
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#yunxu ssh ip
#-A INPUT -s 211.103.223.210 -p tcp --dport 22 -j ACCEPT
#-A INPUT -s 192.168.11.0/24 -p tcp --dport 22 -j ACCEPT
#监控宝
-I INPUT  -p udp -s 60.195.252.107 --dport 161 -j ACCEPT
-I INPUT  -p udp -s 60.195.252.110 --dport 161 -j ACCEPT
#360监控
-I INPUT  -p udp -s 101.199.100.150 --dport 161 -j ACCEPT
-I INPUT  -p udp -s 220.181.150.98 --dport 161 -j ACCEPT
-I INPUT  -p udp -s 180.153.229.230 --dport 161 -j ACCEPT
-I INPUT  -p udp -s 220.181.150.125 --dport 161 -j ACCEPT
-I INPUT  -p udp -s 103.28.11.237 --dport 161 -j ACCEPT
#rsync
-A INPUT -m state --state NEW -m tcp -p tcp --dport 873 -j ACCEPT
#mysql
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
#ftp
-A INPUT -m state --state NEW -m tcp -p tcp --dport 59521 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 59522:59599 -j ACCEPT
#http
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
#dns
-A INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
#svn
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3690 -j ACCEPT
#dos
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
#feng IP
#-I INPUT -s 192.168.1.22 -j DROP
COMMIT
